# candela

./: Cargo.toml  README.md
scripts/: zsh_comp.sh
src/: c_project.rs  disk_usage.rs  duplicates.rs  find_project_files.rs  flattener.rs  is_elf.rs  main.rs  project.rs  recursive_cleaner.rs  template.rs
src/duplicates/: walker.rs
src/flattener/: cli.rs  flatten.rs
src/project/: ccpp.rs
src/recursive_cleaner/: find_project_files.rs  is_elf.rs  project.rs
src/recursive_cleaner/project/: ccpp.rs
