[package]
name = "candela"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
inquire = "0.7.4"
jwalk = "0.8.1"
once_cell = "1.19.0"
regex = "1.10.3"
size = "0.4.1"
spinoff = "0.8.0"
