[package]
name = "candela"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete_command = "0.5.1"
humansize = "2.1.3"
inquire = "0.7.4"
jwalk = "0.8.1"
once_cell = "1.19.0"
regex = "1.10.3"
size = "0.4.1"
spinoff = "0.8.0"
hf = { version = "0.3.6", default-features = false }
multimap = "0.10.0"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
